[package]
name = "yurf"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }

tokio = { version = "1.44.0", features = ["full"] }

ltrait = "=1.5.0"
ltrait-extra = "=0.4.1"
ltrait-gen-calc = "0.2.0"
ltrait-scorer-nucleo = "=0.5.0"
ltrait-sorter-frecency = "=0.3.0"
ltrait-source-desktop = "=0.7.0"
ltrait-ui-tui = "=0.5.0"
ltrait-source-task = "=0.1.0"

strum = { version = "0.27.1", features = ["derive"] }
tracing = "0.1.41"
tikv-jemallocator = "0.6.0"

[profile.dev.package]
tikv-jemalloc-sys = { opt-level = 3 }

# [patch.crates-io]
# ltrait-ui-tui = { path = "../../ltrait/exts/crates/ui-tui" }
